--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "popper.js": "1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-joyride": "^2.2.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0"
